--- a/French.lng
+++ b/French.lng
@@ -1,11 +1,11 @@
 ﻿|~LANGUAGENAME|
 |Français|
 |~LANGUAGEVERSION|
-|1.06|
+|1.07|
 |~LANGUAGEAUTHOR|
-|Marc Tissot, Etienne Chevillard|
+|Marc Tissot|
 |~LANGUAGEAUTHOREMAIL|
-|mtissot@users.sourceforge.net, echevillard@users.sourceforge.net|
+|mtissot@iota.ch|
 |&OK|
 |&OK|
 |&Cancel|
@@ -76,7 +76,7 @@
 |Prêt.|
 |Enter password:|
 |Saisissez le mot de passe :|
-|Select the password disk drive where the key will be stored:|
+|Select the drive to which the key file should be saved to:|
 |Sélectionnez le lecteur où la clé va être enregistrée :|
 |Create a new password database - Enter master key|
 |Créer une nouvelle base de mots de passe - Définir la clé maître|
@@ -90,17 +90,17 @@
 |Confirmez le mot de passe maître|
 |Repeat the master key for the new database.|
 |Confirmez la clé maître pour la nouvelle base de mots de passe.|
-|Select the password disk drive to load the key from:|
-|Sélectionnez le lecteur du disque où la clé est enregistrée :|
-|Open database - Enter master key|
-|Ouvrir la base de mots de passe - Saisissez la clé maître|
+|Select the drive on which the key file is stored:|
+|Sélectionnez le lecteur où la clé est enregistrée :|
+|Open Database - Enter Master Key|
+|Ouvrir la Base de mots de passe - Saisissez la Clé Maître|
 |Enter master key|
 |Saisissez la clé maître|
 |Enter the master key for this database.|
 |Saisissez la clé maître de cette base de mots de passe.|
 |Key|
 |Clé|
-|<no drive selected>|
+|<No drive selected>|
 |<Aucun lecteur sélectionné>|
 |Password Generator|
 |Générateur de mots de passe|
@@ -362,9 +362,9 @@
 |Le fichier ne peut être ouvert.|
 |File cannot be saved!|
 |Le fichier ne peut être enregistré.|
-|Password Safe files|
-|Fichiers Password Safe|
-|All files|
+|KeePass Password Safe Files|
+|Fichiers Password Safe KeePass|
+|All Files|
 |Tous les fichiers|
 |The current file has been modified.|
 |Le fichier courant a été modifié.|
@@ -432,9 +432,9 @@
 |L'application ne peut redémarrer automatiquement.|
 |Please restart KeePass manually.|
 |Veuillez redémarrer KeePass manuellement.|
-|CSV files|
+|CSV Files|
 |Fichers CSV|
-|Text files|
+|Text Files|
 |Fichiers texte|
 |An error occured while importing the file. File cannot be imported.|
 |Une erreur est survenue durant l'importation du fichier. Le fichier ne peut être importé.|
@@ -520,7 +520,7 @@
 |Visiter le site Web de KeePass|
 |Field copied to clipboard.|
 |Champ copié dans le presse-papiers.|
-|A key-file already exists on this drive. Do you want to overwrite or reuse it?|
+|A key file already exists on this drive. Do you want to overwrite or reuse it?|
 |Un fichier-clé existe déjà sur ce disque. Voulez-vous l'écraser ou le réutiliser ?|
 |Overwrite?|
 |Ecraser ?|
@@ -750,9 +750,9 @@
 |Confirmez la clé maître|
 |Repeat the master key for this database.|
 |Confirmez la clé maître pour cette base de mots de passe.|
-|Save key-file manually to...|
+|Save Key File Manually to...|
 |Enregistrer manuellement le fichier-clé sous...|
-|Select key-file manually...|
+|Select Key File Manually...|
 |Sélectionner manuellement le fichier-clé...|
 |&Disable|
 |&Désactiver|
@@ -842,12 +842,10 @@
 |Erreur inconnue|
 |Warning! It's possible that this option won't work correctly on your system, especially if you are using any clipboard enhancing tools or something like this.|
 |Attention ! Il est possible que cette option ne fonctionne pas correctement sur votre système, notamment si vous utilisez des outils de presse-papiers améliorés ou équivalents.|
-|You can choose an other hot key combination in 'Edit - Options - Setup'.|
+|You can choose a different hot key combination in 'Tools - Options - Setup'.|
 |Vous pouvez choisir une autre combinaison de touches de raccourci dans 'Outils - Options - Configuration'.|
-|You've selected the AND key mode, so you must enter a password AND select a key-file.|
-|Vous avez sélectionné le mode de ET, vous devez donc saisir un mot de passe ET sélectionner un fichier-clé.|
-|and|
-|et|
+|You've selected the AND key mode, so you must enter a password AND select a key file.|
+|Vous avez sélectionné le mode de ET, vous devez donc saisir un mot de passe ET sélectionner un fichier clé.|
 |cannot be loaded!|
 |ne peut être chargé.|
 |Exit?|
@@ -858,9 +856,9 @@
 |Sauvegarde|
 |Click [Cancel] to abort changing the key.|
 |Cliquez sur [Annuler] pour annuler le changement de clé.|
-|Click [No] to reuse the selected key-file for this database.|
+|Click [No] to reuse the selected key file for this database.|
 |Cliquez sur [Non] pour réutiliser le fichier-clé sélectionné pour cette base de mots de passe.|
-|Click [Yes] to overwrite the key-file.|
+|Click [Yes] to overwrite the key file.|
 |Cliquez sur [Oui] pour écraser le fichier-clé.|
 |Failed to create backup of this entry!|
 |Impossible de créer une sauvegarde de cette entrée.|
@@ -914,7 +912,7 @@
 |Impossible d'enregistrer la combinaison de touches de raccourci.|
 |Click to expire the entry in %u days|
 |Cliquez pour que l'entrée expire dans %u jours|
-|Enter the passphrase and/or select the key-disk's drive.|
+|Enter the passphrase and/or select the key file's drive.|
 |Entrez la passphrase et/ou sélectionnez le lecteur du fichier-clé.|
 |Exclude entries in the '&Backup' group|
 |Exclure les entrées du groupe '&Sauvegarde'|
@@ -1106,3 +1104,11 @@
 |Valeur|
 |You have the latest version.|
 |Vous avez la dernière version.|
+|Attachment Description|
+|Description de l'Attachment|
+|Make sure the media that contains the key file is inserted and that KeePass has the rights to access it (check file access rights, ensure that no other application is blocking the file, ...).|
+|Assurez vous que le media qui contient le fichier clé est inséré et que KeePass a tous les droits d'accès (vérifier les droits d'accès du fichier, assurez vous qu'aucune autre application n'en bloque l'accès, ...).|
+|URL Field Features|
+|Fonctionnalités de Champ URL|
+|Use password AND key file|
+|Utiliser un mot de passe et un fichier clé|
